versioned_docs/version-0.26/reference/tasklist-api/objects/task.mdx
---
id: task
title: Task
---

export const Tag = ({children, color}) => (
<span
style={{
      backgroundColor: color,
      borderRadius: '2px',
      color: '#fff',
      padding: '0.2rem',
    }}>
{children}
</span>
);

Describes the User task

```graphql
type Task {
  id: ID!
  name: String!
  workflowName: String!
  creationTime: String!
  completionTime: String
  assignee: User
  variables: [Variable!]
  taskState: TaskState!
}
```

### Fields

#### `id` ([`ID!`](../../../../../../../docs/apis-tools/tasklist-api/scalars/id))

The unique identifier of the task

#### `name` ([`String!`](../../../../../../../docs/apis-tools/tasklist-api/scalars/string.mdx))

Name of the task

#### `workflowName` ([`String!`](../../../../../../../docs/apis-tools/tasklist-api/scalars/string.mdx))

Name of the workflow

#### `creationTime` ([`String!`](../../../../../../../docs/apis-tools/tasklist-api/scalars/string.mdx))

When was the task created

#### `completionTime` ([`String`](../../../../../../../docs/apis-tools/tasklist-api/scalars/string.mdx))

When was the task completed

#### `assignee` ([`User`](../../../../../../../docs/apis-tools/tasklist-api/objects/user.mdx))

Who is assigned to the task

#### `variables` ([`[Variable!]`](../../../../../../../docs/apis-tools/tasklist-api/objects/variable.mdx))

Variables associated to the task

#### `taskState` ([`TaskState!`](../../../../../../../docs/apis-tools/tasklist-api/enums/task-state.mdx))

State of the task
