versioned_docs/version-1.0/reference/tasklist-api/objects/task.mdx
---
id: task
title: Task
---

export const Tag = ({children, color}) => (
<span
style={{
      backgroundColor: color,
      borderRadius: '2px',
      color: '#fff',
      padding: '0.2rem',
    }}>
{children}
</span>
);

Describes the User task.

```graphql
type Task {
  id: ID!
  name: String!
  processName: String!
  creationTime: String!
  completionTime: String
  assignee: User
  variables: [Variable!]
  taskState: TaskState!
  sortValues: [String!]
  isFirst: Boolean
  formKey: String
  processDefinitionId: String
}
```

### Fields

#### `id` ([`ID!`](../../../../../docs/apis-tools/tasklist-api/scalars/id.mdx))

The unique identifier of the task

#### `name` ([`String!`](../../../../../docs/apis-tools/tasklist-api/scalars/string.mdx))

Name of the task

#### `processName` ([`String!`](../../../../../docs/apis-tools/tasklist-api/scalars/string.mdx))

Name of the process

#### `creationTime` ([`String!`](../../../../../docs/apis-tools/tasklist-api/scalars/string.mdx))

When was the task created

#### `completionTime` ([`String`](../../../../../docs/apis-tools/tasklist-api/scalars/string.mdx))

When was the task completed

#### `assignee` ([`User`](../../../../../docs/apis-tools/tasklist-api/objects/user.mdx))

Who is assigned to the task

#### `variables` ([`[Variable!]`](../../../../../docs/apis-tools/tasklist-api/objects/variable.mdx))

Variables associated to the task

#### `taskState` ([`TaskState!`](../../../../../docs/apis-tools/tasklist-api/enums/task-state.mdx))

State of the task

#### `sortValues` ([`[String!]`](../../../../../docs/apis-tools/tasklist-api/scalars/string.mdx))

Array of values to be copied into `TaskQuery` to request for next or previous page of tasks.

#### `isFirst` ([`Boolean`](../../../../../docs/apis-tools/tasklist-api/scalars/boolean.mdx))

Flag to show that the task is first in current filter

#### `formKey` ([`String`](../../../../../docs/apis-tools/tasklist-api/scalars/string.mdx))

Reference to the task form

#### `processDefinitionId` ([`String`](../../../../../docs/apis-tools/tasklist-api/scalars/string.mdx))

Reference to process definition
